--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ matplotlib==3.7.1
 numpy==1.24.3
 osmnx==1.3.0
 pandas==2.0.1
+plotly_express==0.4.0
 python-dateutil==2.8.2
 requests==2.29.0
 scipy==1.10.1
