--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ folium==0.14.0
 geopandas==0.12.2
 matplotlib==3.7.1
 numpy==1.24.3
+openpyxl==3.1.2
 osmnx==1.3.0
 pandas==2.0.1
 plotly_express==0.4.0
